--- a/app/src/main/res/layout/fragment_day_book.xml
+++ b/app/src/main/res/layout/fragment_day_book.xml
@@ -53,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10dp"
+                android:id="@+id/saveData"
                 android:background="@drawable/corner_four_grey"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
