added other charges

--- a/app/src/main/res/layout/fragment_bill_history.xml
+++ b/app/src/main/res/layout/fragment_bill_history.xml
@@ -8,69 +8,88 @@
             type="com.kreativesquadz.billkit.ui.bills.billHistory.BillHistoryViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:id="@+id/calenderView"
-           android:layout_margin="@dimen/_10dp"
-           android:background="@drawable/corner_four_grey"
-           android:padding="@dimen/_10dp"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent">
-
-           <ImageView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/calender"/>
-
-           <TextView android:fontFamily="@font/montserrat_regular"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:id="@+id/tvDate"
-               android:text="20-06-2021"
-               android:textSize="@dimen/txt_16sp"
-               android:layout_marginStart="@dimen/_5dp"
-               android:layout_marginEnd="@dimen/_5dp"
-               android:textColor="@color/black"/>
-
-
-
-       </LinearLayout>
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-           android:layout_margin="@dimen/_10dp"
-            android:padding="@dimen/_10dp"
-            android:src="@drawable/search_icon"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <View
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/_10dp"
-            android:layout_marginBottom="@dimen/_10dp"
-            android:id="@+id/lineView"
-            android:background="@color/lite_grey"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calenderView"/>
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/calenderView"
+                android:layout_margin="@dimen/_10dp"
+                android:background="@drawable/corner_four_grey"
+                android:padding="@dimen/_10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/calender"/>
+
+                <TextView android:fontFamily="@font/montserrat_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvDate"
+                    android:text="20-06-2021"
+                    android:textSize="@dimen/txt_16sp"
+                    android:layout_marginStart="@dimen/_5dp"
+                    android:layout_marginEnd="@dimen/_5dp"
+                    android:textColor="@color/black"/>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/billHistoryRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lineView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="@dimen/_10dp"
+                android:padding="@dimen/_10dp"
+                android:src="@drawable/search_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/_10dp"
+                android:layout_marginBottom="@dimen/_10dp"
+                android:id="@+id/lineView"
+                android:background="@color/lite_grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/calenderView"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/billHistoryRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lineView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:visibility="gone"
+    android:background="@color/white">
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"/>
+</LinearLayout>
+
+
+
+    </FrameLayout>
 </layout>
 
 
