--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -398,8 +398,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/tvTotalTax"
-                        android:visibility="@{istTaxAvalaible ? View.VISIBLE : View.GONE}"
-                        android:textSize="12sp"
+                        app:isZeroOrNullDouble="@{invoice.totalTax}"
+                        android:text='@{"Total Tax  Rs "+invoice.totalTax}'                        android:textSize="12sp"
                         android:textStyle="bold"
                         android:gravity="end"
                         android:textColor="@color/text_color_main"
